fix: fix layout bugs

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -53,7 +53,7 @@ footer {
   cursor: pointer
 }
 
-.mobile-footer-wechat {
+.mobile-footer-follow {
   display: none
 }
 
